I will use this repo for all html, css and JavaScript related training

--- a/html-learning/index.html
+++ b/html-learning/index.html
@@ -4,15 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first webpage</title>
+    <title>List example</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
-    <h2>Hello world!</h2>
-    <h3>Hello world!</h3>
-    <h4>Hello world!</h4>
+    <h1>Type of lists in HTML</h1>
+    <h2>Unordered list:</h2>
+    <ul>
+        <li>Item 1.</li>
+        <li>Item 2.</li>
+        <li>Item 3.</li>
+    </ul>
 
+    <h2>Ordered list:</h2>
+    <ol>
+        <li>Item 1.</li>
+        <li>Item 2.</li>
+        <li>Item 3.</li>
+    </ol>
+
+    <h2>Some HTML styling:</h2>
     <p>This is a <strong>paragraph</strong></p>
     <p>This is another <em>different </em><strong>paragraph</strong></p>
+
 </body>
 </html>
