I will use this document as a kind of example with the different functionalities in project odin

--- a/html-learning/index.html
+++ b/html-learning/index.html
@@ -7,20 +7,23 @@
     <title>List example</title>
 </head>
 <body>
-    <h1>Type of lists in HTML</h1>
-    <h2>Unordered list:</h2>
-    <ul>
-        <li>Item 1.</li>
-        <li>Item 2.</li>
-        <li>Item 3.</li>
+    <h1>HTML lessons:</h1> 
+    <ul><h2>Type of lists in HTML:</h2> <!--See documentation for different options-->
+        <li><h3>Unordered lists:</h3>
+            <ul>
+                <li>Item 1.</li>
+                <li>Item 2.</li>
+                <li>Item 3.</li>
+            </ul>        
+        </li>
+        <li><h3>Ordered lists:</h3>
+            <ol>
+                <li>Item 1.</li>
+                <li>Item 2.</li>
+                <li>Item 3.</li>
+            </ol>        
+        </li>
     </ul>
-
-    <h2>Ordered list:</h2>
-    <ol>
-        <li>Item 1.</li>
-        <li>Item 2.</li>
-        <li>Item 3.</li>
-    </ol>
 
     <h2>Some HTML styling:</h2>
     <p>This is a <strong>paragraph</strong></p>
