--- a/html-learning/index.html
+++ b/html-learning/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List example</title>
+    <title>HTML</title>
 </head>
 <body>
     <h1>HTML lessons:</h1> 
     <ul><h2>Type of lists in HTML:</h2> <!--See documentation for different options-->
-        <li><h3>Unordered lists:</h3>
+        <li><h3>Unordered lists:</h3> <!--Using sub-headings in combination with lists-->
             <ul>
                 <li>Item 1.</li>
                 <li>Item 2.</li>
@@ -28,6 +28,38 @@
     <h2>Some HTML styling:</h2>
     <p>This is a <strong>paragraph</strong></p>
     <p>This is another <em>different </em><strong>paragraph</strong></p>
+
+    <ul><h2>Working with links and images:</h2>
+        <li>
+            <h3>Abssolute links:</h3>
+            <p>Links to pages on other websites on the internet.</p>
+            <a href="https://github.com/franfrutos/git_test">This link will guide you to my github repo.</a>
+        </li>
+        <li><h3>Relative links:</h3>
+            <p>Links to other HTML documents on the same website.</p> 
+            <!--Important to put ./ . This point to the subfolder of the html document relative to
+            the current directory.-->
+            <p><a href="./pages/relative-link.html">This link will guide you to another page in this repo.</a></p>
+            <p><a href="./pages/relative-link.html" target="_blank">And this will do the same, but opening a new tab.</a></p>
+        </li>
+        <li>
+            <h3>Images:</h3>
+            <p>We use the tag <strong>img</strong> to point to an image ir our gallery or on the internet.
+            For doing that we only have to indicate in <strong>src</strong> (inside the tag) the link or the name and folder relative to our directory.</p>
+            <p>This is a image that I was taken from the internet:</p>
+            <img src="https://c7.alamy.com/compes/bph118/goku-dragonball-z-la-pelicula-2000-bph118.jpg"
+            height="150"
+            width="100"
+            alt="A Goku image."> <!--To resize the image we only have to change height and width manually-->
+            <p>And this is a image loaded from my gallery:</p>
+            <img src="./images/goku.jpg"
+            height="150"
+            width="100"
+            alt="Another Goku image.">
+            <p>Lastly, if we want to show an image in another page, we just have to use <strong>"../subfolder/image.name/"</strong>.
+            The image in the relative link page was created using this method.</p>
+        </li>
+    </ul>
 
 </body>
 </html>
